fix bug, containers overlap navbar

--- a/public/css/container.css
+++ b/public/css/container.css
@@ -1,4 +1,5 @@
 .box-container{
+    z-index: -1;
     position: relative;
     margin: 2%;
     text-align: left;
